--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ html,body{
     gap: 20px;
 }
 
+.track h2{
+    font-size: 30px;
+    font-weight: 700;
+}
 
 .boxes{
     font-size: 20px;
@@ -52,7 +56,44 @@ html,body{
 }
 
 #mainplayarea{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
     width: 100%;
     height: 90%;
-    background-color: black;
+    padding: 20px;
+}
+
+.bubble{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: #4A6D48;
+    border-radius: 50%;
+    color: white;
+    padding: 25px;
+}
+
+.bubble:hover{
+    cursor: pointer;
+    background-color: #759673;
+}
+
+#bulb{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    height: 500px;
+    width: 500px;
+    border-radius: 50%;
+    background-color: yellowgreen;
+}
+
+button{
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 10px;
 }
